# ResearchGuard-Agent

./: .gitignore  PROJECT_CLEANUP_REPORT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: answer_generation_v1.yaml  baseline.yaml  chroma_v1.yaml  citation_audit_v1.yaml  corpus_profile.yaml  evidence_sufficiency_v1.yaml  indexing_v1.yaml  pipeline_v1.yaml  planner_v2.yaml  query_rewrite_v1.yaml  reranker_v1.yaml  retrieval_v1.yaml
data/eval/: answer_generation_v1_queries.jsonl  citation_audit_v1_queries.jsonl  eval_set.jsonl  eval_set_hard.jsonl  eval_set_harness_general_v1.jsonl  evidence_sufficiency_v1_queries.jsonl  retrieval_v1_queries.jsonl
demo/: app.py  utils.py
frontend/: streamlit_app.py
researchguard/: __init__.py  cli.py  pipeline.py  schemas.py  text_utils_v2.py  utils_ids.py
researchguard/agent/: __init__.py  controller.py  hybrid_planner.py  legacy_agentic_rag.py  planner.py  planner_schema.py  planner_validator.py  policy.py  replanner.py  (+1 more)
scripts/: build_chroma_v1.py  build_chunks_v1.py  build_index_v1.py  repair_researchguard.py  retrieve_v1.py  run_functional_validation.py  run_local_rag_validation.py  validate_agent_benchmark_v2.py  validate_agent_evaluation_v1.py  validate_answer_generation_v1.py  validate_chroma_v1.py  validate_chunking_v1.py  validate_citation_audit_v1.py  validate_demo_v1.py  validate_evidence_sufficiency_v1.py  validate_index_v1.py  validate_parser_v5.py  validate_pipeline_v1.py  validate_query_rewrite_v1.py  validate_reranker_v1.py  validate_retrieval_v1.py
tests/: __init__.py
(+143 files in other folders)
